@@ -28,6 +28,12 @@ Library
   On all linux systems the --with-system-ffi configure option defaults
   to "yes".
 
+Tests
+-----
+
+- Patch #2232: os.tmpfile might fail on Windows if the user has no
+  permission to create files in the root directory.
+
 
 What's New in Python 2.6 alpha 1?
 =================================
